--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "sass": "sass --watch src/sass/index.scss:src/index.css",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "dev": "vite",
